Kubernets-files/Deployment_flaskapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: 817775426354.dkr.ecr.us-east-1.amazonaws.com/sprints-ecr-repo:build-${BUILD_NUMBER}-app
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:   # Add resource limits here
            limits:
              cpu: "0.5"   # Specify the CPU limit (e.g., 0.5 CPU core)
              memory: "512Mi"   # Specify the memory limit (e.g., 512 MiB)
            requests:
              cpu: "0.1"   # Specify the CPU request (e.g., 0.1 CPU core)
              memory: "128Mi"   # Specify the memory request (e.g., 128 MiB)
      volumes:
        - name: app-secret
          secret:
            secretName: app-secrets
        - name: app-config-volume
          configMap:
            name: flask-app-config
